# ai_application

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  requirements.txt  学习材料改造规范.md  文档与代码质量规范.md  文档与代码质量规范实施计划.md
.cursor/skills/: course-writing
archive/: README.md
course/: ai_trategy.md
course/01_python/: 01_basics.md  02_data_structures.md  03_string_file.md  05_functions.md  07_module_exception.md  README.md  outline.md
course/02_llm/: 00_llm_problem_space.md  01_model_api_and_provider_abstraction.md  02_prompt_engineering_for_apps.md  03_prompt_engineering.md  03_structured_outputs.md  04_streaming_and_conversation.md  05_context_engineering.md  05_streaming_fastapi.md  06_reliability_cost_security.md  outline.md
course/03_foundation/: 01_llm_principles.md  02_transformer_attention.md  03_model_lifecycle_and_selection.md  05_langchain_engineering.md  06_foundation_lab_design.md  README.md
course/03_rag/: outline.md
course/04_agent/: outline.md
course/04_rag/: 03_embeddings.md  08_advanced_rag.md
course/05_eval_observability/: outline.md
course/06_ai_native/: outline.md
course/06_ai_native_frontend/: outline.md
course/06_application/: README.md  outline.md  outline_v1.md  outline_v2.md
course/07_projects/: outline.md
docs/: README.md  agent-skill.md  ai-application-platform.md  ai-coding-mastery.md  ai_trategy.md  course-template.md  learning-guide.md  llmops.md  strategy.md  writing.md
docs/01_python/: 06_class.md  (+9 more)
other/: README.md  SKILL.md  comparisons.md
review_assistant/: README.md
source/: README.md
(+521 files in other folders)
