[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-application-workspace"
version = "0.1.0"
description = "AI application learning workspace — editable packages under source/packages/"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["source/packages"]

[tool.setuptools.package-dir]
"" = "source/packages"
